k8s/03-mongo-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: chat-app
spec:
  serviceName: "mongodb-svc"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      # 1. Toleration: Tainted node par jane ki ijazat
      tolerations:
      - key: "key"
        operator: "Equal"
        value: "value"
        effect: "NoSchedule"
      # 2. Node Affinity: Sirf Worker 1 par jana
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - my-k8-cluster-worker
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        # 3. Secrets ko Pod mein as Environment Variables bhejna
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        # 5. Storage Attach karna
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
