k8s/07-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  namespace: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - my-k8-cluster-worker2 # Yeh bhi Worker 2 par jayega
      containers:
      - name: frontend
        image: wajahathr/mern-frontend:v1
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "150m"
            memory: "128Mi"
