k8s/04-mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: chat-app
spec:
  type: ClusterIP # Sirf cluster ke andar ke pods is se baat kar sakte hain
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongodb
