k8s/08-frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: chat-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30005 # Is specific port se hum bahar se access karenge
  selector:
    app: chat-frontend
