k8s/09-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  namespace: chat-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http: # Yahan se 'host: chat.local' ki line hata di hai
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc # Yahan ghaur karein, frontend ki service ka exact naam hona chahiye
            port:
              number: 80
